package lab3;

public record Pair<X, Y>(X x, Y y) {
}
