package lab3.interfaces;

public interface Driving {
    public void drive();
    public void stop();
}
